# docservice

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docservice/: app.py  cli.py
tests/: conftest.py  test_updown.py
