[tool.poetry]
name = "docservice"
version = "0.1.2"
description = ""
authors = ["Bastien Wermeille <bastien.wermeille@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
sentry-sdk = {extras = ["flask"], version = "^1.45.0"}
importlib-metadata = "^7.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.jupyterhub.dependencies]
jupyterhub = "^4.1.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-flask = "^1.2.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docservice = { callable = "docservice.cli:main" }
