[tool.poetry]
name = "docservice"
version = "0.2.2"
description = ""
authors = ["Bastien Wermeille <bastien.wermeille@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
sentry-sdk = {extras = ["flask"], version = "^2.3.1"}
importlib-metadata = "^7.0.0"
flask-cors = "^4.0.1"
waitress = "^3.0.0"

[tool.poetry.group.jupyterhub.dependencies]
jupyterhub = "^5.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-flask = "^1.2.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docservice = { callable = "docservice.cli:main" }
